--- a/index.html
+++ b/index.html
@@ -12,14 +12,9 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-   <script>
-  if (
-    window.location.pathname === "/transportation-app/" && 
-    !window.location.hash
-  ) {
-    window.location.replace("/transportation-app/#/");
-  }
-</script>
+    <script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
+
+   
 
 
   </body>
